--- a/style/style.css
+++ b/style/style.css
@@ -18,7 +18,7 @@ body{
 
 main{
     width:1440px;
-    padding:2rem;
+    padding:1rem;
     margin:auto;
 }
 
@@ -54,4 +54,97 @@ nav{
 .signUp{
     font-weight:700;
     color:var(--blue);
+}
+
+/* SEARCH */
+
+.searchIcon,.searchInput,.searchButton{
+    padding:1rem 1.25rem;
+}
+
+.searchForm{
+    max-width:100%;
+    display:inline-flex;
+    overflow:auto;
+    align-items:center;
+    margin-top:1rem;
+    margin-bottom:1rem;
+}
+
+.searchIcon{
+    background-color:var(--gray);
+    border-top-left-radius:20px;
+    border-bottom-left-radius:20px;
+    margin:auto;
+}
+
+.searchInput{
+    border-left:none;
+    border-right:none;
+    border:1px solid var(--gray);
+    font-weight:700;
+}
+
+.searchInput::placeholder{
+    color:black;
+}
+
+.searchButton{
+    background-color:var(--blue);
+    border:none;
+    border-top-right-radius:20px;
+    border-bottom-right-radius:20px;
+    color:white;
+    font-weight:700;
+}
+
+.filterContainer{
+    display:flex;
+    align-items:center;
+    margin-bottom:1rem;
+}
+
+.filterContainer h4{
+    margin-right:1rem;
+}
+
+.filterButton{
+    border:3px solid var(--gray);
+    border-radius:20px;
+    display:flex;
+    align-items:center;
+    margin:1rem;
+    text-align:center;
+}
+
+.filterWrapIcon i{
+    color:var(--blue);
+    background-color:var(--light-blue);
+    border-radius:100%;
+    height:3rem;
+    width:3rem;
+    padding:1rem;
+    margin:-3px;
+}
+
+.filterTitle{
+    font-weight:700;
+    margin:10px;
+}
+
+.filterResult{
+    display:flex;
+    align-items:center;
+}
+
+.resultIcon{
+    border:1px solid var(--gray);
+    border-radius:100%;
+    height:2rem;
+    width:2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color:var(--blue);
+    margin-right:10px;
 }
