--- a/style/style.css
+++ b/style/style.css
@@ -398,23 +398,28 @@ footer a:last-of-type{
   }
 
   .hostingTitle{
-    flex-basis:calc(100%);
+    flex-basis: calc(100%/1);
   }
 
   .hostingTitle h4{
     margin-right:12rem;
   }
+
   .hostingMainItem{
     flex-basis:calc(95% / 2);
   }
 
   .hostingAside{
     display:flex;
-    flex-direction:column;
+    flex-direction:row;
     align-items:center;
+    flex-wrap:wrap;
   }
+
   .hostingAsideItem{
     width:60%;
+    flex-basis: calc(85% / 3);
+    margin:1rem auto;
   }
 
   .showMore{
